--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,8 @@
   control connection.
 - Issue 870 - Leaking PAM handler and data in case of unsuccessful
   authentication.
+- Issue 808 - ProFTPD should ignore supplemental groups when started as non-root
+  user.
 
 1.3.7rc2 - Released 19-Oct-2019
 --------------------------------
